--- a/before-we-begin.html
+++ b/before-we-begin.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jesús Lopez Aguilar - ePortfolio</title>
+  <title>Before We Begin - Jesús Lopez Aguilar</title>
   <style>
     * {
       margin: 0;
@@ -18,7 +18,6 @@
       font-family: 'Nunito', sans-serif;
       color: #f0f0f0;
       overflow-x: hidden;
-      transition: background-color 0.3s ease;
     }
 
     /* Navbar */
@@ -35,7 +34,6 @@
       justify-content: center;
       align-items: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
-      transition: padding 0.3s ease;
     }
 
     #nav-links {
@@ -71,7 +69,6 @@
       display: none;
       flex-direction: column;
       cursor: pointer;
-      transition: transform 0.3s ease;
     }
 
     .hamburger-menu div {
@@ -79,7 +76,6 @@
       height: 3px;
       margin: 5px;
       background-color: #000;
-      transition: transform 0.3s ease;
     }
 
     /* Mobile menu - hidden by default */
@@ -129,7 +125,7 @@
     }
 
     /* Main content */
-    .name-center {
+    .before-we-begin {
       min-height: 90vh;
       display: flex;
       align-items: center;
@@ -141,19 +137,13 @@
       margin-top: 70px;
     }
 
-    .name-center h1 {
+    .before-we-begin h1 {
       font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-
-    .name-center h2 {
-      font-size: 1.2rem;
-      color: #00bcd4;
       margin-bottom: 20px;
     }
 
-    .name-center p {
-      font-size: 1rem;
+    .before-we-begin p {
+      font-size: 1.2rem;
       color: #f0f0f0;
       margin-bottom: 30px;
     }
@@ -207,12 +197,12 @@
         font-size: 1rem;
       }
 
-      .name-center h1 {
+      .before-we-begin h1 {
         font-size: 1.8rem;
       }
 
-      .name-center p {
-        font-size: 0.9rem;
+      .before-we-begin p {
+        font-size: 1rem;
       }
     }
   </style>
@@ -247,13 +237,13 @@
     <a href="projects.html">Personal Projects</a>
   </div>
 
-  <!-- Main Content -->
-  <div class="name-center">
-    <h1>Welcome to my SLCC ePortfolio: General Education!</h1>
-    <h2>Crafted by: Jesús Lopez Aguilar and his 7 other mood swings.</h2>
-    <p>Here you’ll find my work, reflection, and life throughout my academic and personal journey.</p>
-    <p>This will reflect the work I crafted from scratch, so if there’s an error... don’t tell me, I’ll go insane.</p>
-    <a href="before-we-begin.html" class="button">Let's Explore</a> <!-- Links to the "Before We Begin" page -->
+  <!-- Main Content for "Before We Begin" -->
+  <div class="before-we-begin">
+    <h1>Before We Begin...</h1>
+    <p>Welcome to my ePortfolio! This is where I share my academic journey and personal projects. But before diving into my work, here's a quick intro:</p>
+    <p>As you explore, keep in mind that this ePortfolio is a reflection of my experiences, achievements, and the ups and downs of creating this website from scratch. If something goes wrong, please don’t mention it... my inner perfectionist might break down!</p>
+    <p>Ready to explore my work and journey? Click below to proceed!</p>
+    <a href="about.html" class="button">Proceed to ePortfolio</a>
   </div>
 
   <!-- Footer -->
