--- a/courses.html
+++ b/courses.html
@@ -121,6 +121,7 @@
       transition-delay: 0.3s;
     }
 
+    /* Courses Content */
     .courses-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -214,7 +215,6 @@
       }
     }
   </style>
-
 </head>
 
 <body>
@@ -250,27 +250,28 @@
     <!-- Course Card 1 -->
     <div class="course-card">
       <img src="course1.jpg" alt="Course Image 1">
-      <h3>Introduction to Criminal Justice</h3>
-      <p>Learn about the basics of the criminal justice system, law enforcement, and criminal law.</p>
+      <h3>American Institutions (AI)</h3>
+      <p>Explore the foundations of the U.S. government and history, focusing on the formation of the Constitution and key historical events.</p>
       <a href="course-details.html" class="button">Learn More</a>
     </div>
 
     <!-- Course Card 2 -->
     <div class="course-card">
       <img src="course2.jpg" alt="Course Image 2">
-      <h3>Healthcare Ethics and Law</h3>
-      <p>Explore the ethical and legal aspects of healthcare practice and the challenges faced by professionals.</p>
+      <h3>Humanities (HU)</h3>
+      <p>Study the rich cultural history of the human experience through the lens of philosophy, literature, and art.</p>
       <a href="course-details.html" class="button">Learn More</a>
     </div>
 
     <!-- Course Card 3 -->
     <div class="course-card">
       <img src="course3.jpg" alt="Course Image 3">
-      <h3>Medical Terminology</h3>
-      <p>Study the vocabulary used in healthcare and medical fields, focusing on terms and anatomy.</p>
+      <h3>Social Science (SS)</h3>
+      <p>Understand societal structures and behaviors through the study of sociology, psychology, and economics.</p>
       <a href="course-details.html" class="button">Learn More</a>
     </div>
-    <!-- Add more course cards here as needed -->
+
+    <!-- More courses can be added here -->
   </div>
 
   <!-- Footer -->
@@ -284,6 +285,7 @@
       mobileNav.classList.toggle('active');
     }
   </script>
+
 </body>
 
 </html>
