--- a/courses.html
+++ b/courses.html
@@ -121,7 +121,6 @@
       transition-delay: 0.3s;
     }
 
-    /* Courses Content */
     .courses-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -210,7 +209,6 @@
       margin: 0;
     }
 
-    /* Mobile Adjustments */
     @media (max-width: 768px) {
       #nav-links {
         display: none;
@@ -267,7 +265,6 @@
 
   <!-- Courses Content -->
   <div class="courses-container">
-    <!-- Course Card 1 -->
     <div class="course-card">
       <img src="course1.jpg" alt="Course Image 1">
       <div class="text-overlay">
@@ -278,7 +275,6 @@
       </div>
     </div>
 
-    <!-- Course Card 2 -->
     <div class="course-card">
       <img src="course2.jpg" alt="Course Image 2">
       <div class="text-overlay">
@@ -289,7 +285,6 @@
       </div>
     </div>
 
-    <!-- Course Card 3 -->
     <div class="course-card">
       <img src="course3.jpg" alt="Course Image 3">
       <div class="text-overlay">
@@ -300,7 +295,76 @@
       </div>
     </div>
 
-    <!-- More courses can be added here -->
+    <div class="course-card">
+      <img src="course4.jpg" alt="Course Image 4">
+      <div class="text-overlay">
+        <div>
+          <h3>Composition (EN) - ENGL-1010</h3>
+          <p>Develop writing skills for college-level English composition.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="course-card">
+      <img src="course5.jpg" alt="Course Image 5">
+      <div class="text-overlay">
+        <div>
+          <h3>Life Science (LS)</h3>
+          <p>Learn about biology, ecology, and the natural world.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="course-card">
+      <img src="course6.jpg" alt="Course Image 6">
+      <div class="text-overlay">
+        <div>
+          <h3>Communication (CM)</h3>
+          <p>Understand the principles of human communication and media.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="course-card">
+      <img src="course7.jpg" alt="Course Image 7">
+      <div class="text-overlay">
+        <div>
+          <h3>International and Global (IG)</h3>
+          <p>Examine global issues and international relations.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="course-card">
+      <img src="course8.jpg" alt="Course Image 8">
+      <div class="text-overlay">
+        <div>
+          <h3>Physical Science (PS)</h3>
+          <p>Study the fundamentals of physics and chemistry.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="course-card">
+      <img src="course9.jpg" alt="Course Image 9">
+      <div class="text-overlay">
+        <div>
+          <h3>Lifelong Wellness (LW)</h3>
+          <p>Learn strategies for maintaining physical and mental health.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="course-card">
+      <img src="course10.jpg" alt="Course Image 10">
+      <div class="text-overlay">
+        <div>
+          <h3>Quantitative Literacy (QL/GS)</h3>
+          <p>Learn essential mathematical and statistical skills.</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <!-- Footer -->
