--- a/courses.html
+++ b/courses.html
@@ -121,6 +121,7 @@
       transition-delay: 0.3s;
     }
 
+    /* Courses Content */
     .courses-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -265,18 +266,9 @@
 
   <!-- Courses Content -->
   <div class="courses-container">
+    <!-- Course Cards (Updated with your course names) -->
     <div class="course-card">
       <img src="course1.jpg" alt="Course Image 1">
-      <div class="text-overlay">
-        <div>
-          <h3>American Institutions (AI)</h3>
-          <p>Explore the foundations of the U.S. government and history.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="course-card">
-      <img src="course2.jpg" alt="Course Image 2">
       <div class="text-overlay">
         <div>
           <h3>Humanities (HU)</h3>
@@ -286,11 +278,21 @@
     </div>
 
     <div class="course-card">
+      <img src="course2.jpg" alt="Course Image 2">
+      <div class="text-overlay">
+        <div>
+          <h3>American Institutions (AI)</h3>
+          <p>Explore the foundations of the U.S. government and history.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="course-card">
       <img src="course3.jpg" alt="Course Image 3">
       <div class="text-overlay">
         <div>
-          <h3>Social Science (SS)</h3>
-          <p>Understand societal structures through sociology and economics.</p>
+          <h3>Life Science (LS)</h3>
+          <p>Learn about biology, ecology, and the natural world.</p>
         </div>
       </div>
     </div>
@@ -309,8 +311,8 @@
       <img src="course5.jpg" alt="Course Image 5">
       <div class="text-overlay">
         <div>
-          <h3>Life Science (LS)</h3>
-          <p>Learn about biology, ecology, and the natural world.</p>
+          <h3>Social Science (SS)</h3>
+          <p>Understand societal structures through sociology and economics.</p>
         </div>
       </div>
     </div>
