--- a/courses.html
+++ b/courses.html
@@ -121,13 +121,33 @@
       transition-delay: 0.3s;
     }
 
+    /* Introduction Text */
+    .intro {
+      text-align: center;
+      margin-top: 100px;
+      padding: 30px;
+      background-color: #333;
+      color: #fff;
+      border-radius: 10px;
+    }
+
+    .intro h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .intro p {
+      font-size: 1.1rem;
+      margin-bottom: 20px;
+    }
+
     /* Courses Content */
     .courses-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
       gap: 20px;
       padding: 20px;
-      margin-top: 100px;
+      margin-top: 50px;
     }
 
     .course-card {
@@ -262,6 +282,13 @@
     <a href="courses.html">Courses</a>
     <a href="achievements.html">Achievements</a>
     <a href="projects.html">Personal Projects</a>
+  </div>
+
+  <!-- Introduction Section -->
+  <div class="intro">
+    <h2>Welcome to My General Education Courses</h2>
+    <p>Alright, let’s get real—this section isn’t just about “what I’ve learned.” No, this is where I break down my journey through Salt Lake Community College, looking at the classes that molded me (sometimes with a side of tears). It’s a wild ride of knowledge and chaos, but it’s all part of how I’m building myself.</p>
+    <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are *experiences*—and here’s where I tell you all about them.</p>
   </div>
 
   <!-- Courses Content -->
