--- a/courses.html
+++ b/courses.html
@@ -21,6 +21,7 @@
       overflow-x: hidden;
     }
 
+    /* Navbar */
     nav {
       background-color: white;
       padding: 10px 0;
@@ -64,6 +65,7 @@
       transform: scale(1.1);
     }
 
+    /* Hamburger Menu */
     .hamburger-menu {
       display: none;
       flex-direction: column;
@@ -121,33 +123,13 @@
       transition-delay: 0.3s;
     }
 
-    /* Introduction Text */
-    .intro {
-      text-align: center;
-      margin-top: 100px;
-      padding: 30px;
-      background-color: #333;
-      color: #fff;
-      border-radius: 10px;
-    }
-
-    .intro h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-
-    .intro p {
-      font-size: 1.1rem;
-      margin-bottom: 20px;
-    }
-
     /* Courses Content */
     .courses-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
       gap: 20px;
       padding: 20px;
-      margin-top: 50px;
+      margin-top: 100px;
     }
 
     .course-card {
@@ -170,25 +152,32 @@
       transition: transform 0.3s ease;
     }
 
-    .course-card .text-overlay {
+    /* Dark overlay */
+    .course-card .overlay {
       position: absolute;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+      transition: background-color 0.3s ease;
+    }
+
+    .course-card:hover .overlay {
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .course-card .text-overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       text-align: center;
-      background: rgba(0, 0, 0, 0.5);
       color: #fff;
       font-size: 1.5rem;
       font-weight: 600;
-      transition: background 0.3s ease;
-    }
-
-    .course-card:hover .text-overlay {
-      background: rgba(0, 0, 0, 0.7);
+      z-index: 2;
     }
 
     .course-card h3 {
@@ -284,18 +273,12 @@
     <a href="projects.html">Personal Projects</a>
   </div>
 
-  <!-- Introduction Section -->
-  <div class="intro">
-    <h2>Welcome to My General Education Courses</h2>
-    <p>Alright, let’s get real—this section isn’t just about “what I’ve learned.” No, this is where I break down my journey through Salt Lake Community College, looking at the classes that molded me (sometimes with a side of tears). It’s a wild ride of knowledge and chaos, but it’s all part of how I’m building myself.</p>
-    <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are *experiences*—and here’s where I tell you all about them.</p>
-  </div>
-
   <!-- Courses Content -->
   <div class="courses-container">
     <!-- Course Cards (Updated with your course names) -->
     <div class="course-card">
-      <img src="course1.jpg" alt="Course Image 1">
+      <img src="course1.jpg" alt="Humanities Course Image">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>Humanities (HU)</h3>
@@ -306,6 +289,7 @@
 
     <div class="course-card">
       <img src="course2.jpg" alt="Course Image 2">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>American Institutions (AI)</h3>
@@ -316,6 +300,7 @@
 
     <div class="course-card">
       <img src="course3.jpg" alt="Course Image 3">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>Life Science (LS)</h3>
@@ -326,6 +311,7 @@
 
     <div class="course-card">
       <img src="course4.jpg" alt="Course Image 4">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>Composition (EN) - ENGL-1010</h3>
@@ -336,6 +322,7 @@
 
     <div class="course-card">
       <img src="course5.jpg" alt="Course Image 5">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>Social Science (SS)</h3>
@@ -346,6 +333,7 @@
 
     <div class="course-card">
       <img src="course6.jpg" alt="Course Image 6">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>Communication (CM)</h3>
@@ -356,6 +344,7 @@
 
     <div class="course-card">
       <img src="course7.jpg" alt="Course Image 7">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>International and Global (IG)</h3>
@@ -366,6 +355,7 @@
 
     <div class="course-card">
       <img src="course8.jpg" alt="Course Image 8">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>Physical Science (PS)</h3>
@@ -376,6 +366,7 @@
 
     <div class="course-card">
       <img src="course9.jpg" alt="Course Image 9">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>Lifelong Wellness (LW)</h3>
@@ -386,6 +377,7 @@
 
     <div class="course-card">
       <img src="course10.jpg" alt="Course Image 10">
+      <div class="overlay"></div>
       <div class="text-overlay">
         <div>
           <h3>Quantitative Literacy (QL/GS)</h3>
@@ -393,7 +385,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
   <!-- Footer -->
