--- a/courses.html
+++ b/courses.html
@@ -311,8 +311,17 @@
         </div>
       </div>
     </div>
-
-    <!-- Other Course Cards follow the same structure -->
+    <div class="course-card">
+      <img src="course2.jpg" alt="Fine Arts Course Image">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <div>
+          <h3>Fine Arts (FA)</h3>
+          <p>Explore artistic expression and its impact on culture.</p>
+        </div>
+      </div>
+    </div>
+    <!-- Add more courses similarly -->
   </div>
 
   <!-- Footer -->
@@ -326,7 +335,6 @@
       mobileNav.classList.toggle('active');
     }
   </script>
-
 </body>
 
 </html>
