--- a/courses.html
+++ b/courses.html
@@ -2,339 +2,334 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Courses - Jesús Lopez Aguilar</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Courses - Jesús Lopez Aguilar</title>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    body {
-      background-color: #1c1c1c;
-      font-family: 'Nunito', sans-serif;
-      color: #f0f0f0;
-      overflow-x: hidden;
-    }
+        body {
+            background-color: #1c1c1c;
+            font-family: 'Nunito', sans-serif;
+            color: #f0f0f0;
+            overflow-x: hidden;
+            padding-top: 60px; /* Add padding to prevent content from being hidden under the fixed navbar */
+        }
 
-    /* Navbar */
-    nav {
-      background-color: white;
-      padding: 10px 0;
-      width: 100%;
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 1000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
-    }
+        /* Navbar */
+        nav {
+            background-color: white;
+            padding: 10px 20px; /* Add horizontal padding */
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            display: flex;
+            justify-content: space-between; /* Space out hamburger and links */
+            align-items: center;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+        }
 
-    #nav-links {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
-      justify-content: center;
-    }
+        #nav-links {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+            justify-content: center;
+        }
 
-    #nav-links li {
-      display: inline-block;
-    }
+        #nav-links li {
+            display: inline-block;
+        }
 
-    #nav-links li a {
-      color: black;
-      text-decoration: none;
-      font-size: 1.2rem;
-      font-weight: 600;
-      padding: 8px 15px;
-      transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
-    }
+        #nav-links li a {
+            color: black;
+            text-decoration: none;
+            font-size: 1.2rem;
+            font-weight: 600;
+            padding: 8px 15px;
+            transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
+        }
 
-    #nav-links li a:hover {
-      color: #00bcd4;
-      text-shadow: 0 0 8px #00bcd4;
-      transform: scale(1.1);
-    }
+        #nav-links li a:hover {
+            color: #00bcd4;
+            text-shadow: 0 0 8px #00bcd4;
+            transform: scale(1.1);
+        }
 
-    .hamburger-menu {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
+        .hamburger-menu {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+        }
 
-    .hamburger-menu div {
-      width: 25px;
-      height: 3px;
-      margin: 5px;
-      background-color: #000;
-    }
+        .hamburger-menu div {
+            width: 25px;
+            height: 3px;
+            margin: 5px 0; /* Adjust vertical margin */
+            background-color: #000;
+        }
 
-    .mobile-nav {
-      display: none;
-      position: absolute;
-      top: -100%;
-      right: 0;
-      background-color: rgba(255, 255, 255, 0.9);
-      width: 100%;
-      height: 100vh;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 30px;
-      padding: 10px 0;
-      opacity: 0;
-      visibility: hidden;
-      transition: top 0.8s ease-in-out, opacity 0.8s ease-in-out, visibility 0.8s ease-in-out;
-    }
+        .mobile-nav {
+            display: none;
+            position: fixed; /* Changed to fixed for better overlay */
+            top: 0;
+            right: 0;
+            background-color: rgba(255, 255, 255, 0.95); /* Slightly more opaque */
+            width: 100%;
+            height: 100vh;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 30px;
+            padding: 60px 0; /* Add padding to account for fixed navbar */
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; /* Faster transition */
+        }
 
-    .mobile-nav a {
-      color: black;
-      font-size: 1.5rem;
-      font-weight: 600;
-      text-decoration: none;
-      opacity: 0;
-      transition: opacity 0.8s ease-in-out;
-    }
+        .mobile-nav a {
+            color: black;
+            font-size: 1.5rem;
+            font-weight: 600;
+            text-decoration: none;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out 0.1s; /* Added delay for staggered effect */
+        }
 
-    .mobile-nav a:hover {
-      color: #00bcd4;
-      text-shadow: 0 0 8px #00bcd4;
-      transform: scale(1.1);
-    }
+        .mobile-nav a:hover {
+            color: #00bcd4;
+            text-shadow: 0 0 8px #00bcd4;
+            transform: scale(1.1);
+        }
 
-    .mobile-nav.active {
-      top: 0;
-      opacity: 1;
-      visibility: visible;
-    }
+        .mobile-nav.active {
+            opacity: 1;
+            visibility: visible;
+        }
 
-    .mobile-nav.active a {
-      opacity: 1;
-      transition-delay: 0.3s;
-    }
+        .mobile-nav.active a {
+            opacity: 1;
+        }
 
-    /* Introduction Text */
-    .intro {
-      text-align: center;
-      margin-top: 100px;
-      padding: 30px;
-      background-color: #333;
-      color: #fff;
-      border-radius: 10px;
-      margin-bottom: 30px;
-    }
+        /* Introduction Text */
+        .intro {
+            text-align: center;
+            margin-top: 30px; /* Reduced top margin */
+            padding: 30px;
+            background-color: #333;
+            color: #fff;
+            border-radius: 10px;
+            margin-bottom: 30px;
+        }
 
-    .intro h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
+        .intro h2 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
 
-    .intro p {
-      font-size: 1.1rem;
-      margin-bottom: 20px;
-    }
+        .intro p {
+            font-size: 1.1rem;
+            margin-bottom: 20px;
+        }
 
-    /* Courses Content */
-    .courses-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
+        /* Courses Content */
+        .courses-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
 
-    .course-card {
-      position: relative;
-      background-color: #333;
-      overflow: hidden;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+        .course-card {
+            position: relative;
+            background-color: #333;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
 
-    .course-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
-    }
+        .course-card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
+        }
 
-    .course-card img {
-      width: 100%;
-      height: auto;
-      transition: transform 0.3s ease;
-    }
+        .course-card img {
+            width: 100%;
+            height: auto;
+            transition: filter 0.3s ease; /* Transition for the filter */
+        }
 
-    .course-card .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 1;
-      transition: background-color 0.3s ease;
-    }
+        .course-card .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1;
+            transition: background-color 0.3s ease;
+        }
 
-    .course-card:hover .overlay {
-      background-color: rgba(0, 0, 0, 0.7);
-    }
+        .course-card:hover .overlay {
+            background-color: rgba(0, 0, 0, 0.7);
+        }
 
-    .course-card .text-overlay {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      color: #fff;
-      font-size: 1.5rem;
-      font-weight: 600;
-      z-index: 2;
-    }
+        .course-card .text-overlay {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: #fff;
+            font-size: 1.5rem;
+            font-weight: 600;
+            z-index: 2;
+        }
 
-    .course-card h3 {
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-      color: #00bcd4;
-    }
+        .course-card h3 {
+            font-size: 1.2rem;
+            margin-bottom: 10px;
+            color: #00bcd4;
+        }
 
-    .course-card p {
-      font-size: 1rem;
-      color: #f0f0f0;
-      margin-bottom: 20px;
-    }
+        .course-card p {
+            font-size: 1rem;
+            color: #f0f0f0;
+            margin-bottom: 20px;
+        }
 
-    .button {
-      background-color: #00bcd4;
-      color: #1f1f1f;
-      padding: 10px 25px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
-      transition: background-color 0.3s, box-shadow 0.3s;
-    }
+        .button {
+            background-color: #00bcd4;
+            color: #1f1f1f;
+            padding: 10px 25px;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: bold;
+            transition: background-color 0.3s, box-shadow 0.3s;
+        }
 
-    .button:hover {
-      background-color: #0097a7;
-      box-shadow: 0 0 10px #00bcd4;
-    }
+        .button:hover {
+            background-color: #0097a7;
+            box-shadow: 0 0 10px #00bcd4;
+        }
 
-    footer {
-      background-color: #2a2a2a;
-      padding: 15px;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #aaa;
-      width: 100%;
-      position: relative;
-      bottom: 0;
-      margin: 0;
-    }
+        footer {
+            background-color: #2a2a2a;
+            padding: 15px;
+            text-align: center;
+            font-size: 0.9rem;
+            color: #aaa;
+            width: 100%;
+            position: relative;
+            bottom: 0;
+            margin-top: 30px; /* Add some top margin to separate from content */
+        }
 
-    @media (max-width: 768px) {
-      #nav-links {
-        display: none;
-      }
+        /* Darken the image on hover */
+        .course-card:hover img {
+            filter: brightness(70%); /* Adjust the percentage to control darkness */
+        }
 
-      .hamburger-menu {
-        display: flex;
-      }
+        @media (max-width: 768px) {
+            #nav-links {
+                display: none;
+            }
 
-      .mobile-nav {
-        display: flex;
-      }
-    }
+            .hamburger-menu {
+                display: flex;
+            }
 
-    @media (max-width: 480px) {
-      .course-card h3 {
-        font-size: 1rem;
-      }
+            .mobile-nav {
+                display: flex;
+            }
+        }
 
-      .course-card p {
-        font-size: 0.9rem;
-      }
-    }
-  </style>
+        @media (max-width: 480px) {
+            .course-card h3 {
+                font-size: 1rem;
+            }
+
+            .course-card p {
+                font-size: 0.9rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav>
-    <div class="nav-container">
-      <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <ul id="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="courses.html">Courses</a></li>
-        <li><a href="achievements.html">Achievements</a></li>
-        <li><a href="projects.html">Personal Projects</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Mobile Menu -->
-  <div class="mobile-nav" id="mobile-nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About Me</a>
-    <a href="courses.html">Courses</a>
-    <a href="achievements.html">Achievements</a>
-    <a href="projects.html">Personal Projects</a>
-  </div>
-
-  <!-- Introduction Section -->
-  <div class="intro">
-    <h2>Welcome to My General Education Courses</h2>
-    <p>Alright, let’s get real—this section isn’t just about “what I’ve learned.” No, this is where I break down my journey through Salt Lake Community College, looking at the classes that molded me (sometimes with a side of tears). It’s a wild ride of knowledge and chaos, but it’s all part of how I’m building myself.</p>
-    <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are *experiences*—and here’s where I tell you all about them.</p>
-  </div>
-
-  <!-- Courses Content -->
-  <div class="courses-container">
-    <!-- Course Cards (Updated with your course names) -->
-    <div class="course-card">
-      <img src="course1.jpg" alt="Humanities Course Image">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <div>
-          <h3>Humanities (HU)</h3>
-          <p>Study philosophy, literature, and art in human history.</p>
+    <nav>
+        <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
-      </div>
+        <ul id="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="achievements.html">Achievements</a></li>
+            <li><a href="projects.html">Personal Projects</a></li>
+        </ul>
+    </nav>
+
+    <div class="mobile-nav" id="mobile-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="courses.html">Courses</a>
+        <a href="achievements.html">Achievements</a>
+        <a href="projects.html">Personal Projects</a>
     </div>
-    <div class="course-card">
-      <img src="course2.jpg" alt="Fine Arts Course Image">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <div>
-          <h3>Fine Arts (FA)</h3>
-          <p>Explore artistic expression and its impact on culture.</p>
+
+    <div class="intro">
+        <h2>Welcome to My General Education Courses</h2>
+        <p>Alright, let’s get real—this section isn’t just about “what I’ve learned.” No, this is where I break down my journey through Salt Lake Community College, looking at the classes that molded me (sometimes with a side of tears). It’s a wild ride of knowledge and chaos, but it’s all part of how I’m building myself.</p>
+        <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are *experiences*—and here’s where I tell you all about them.</p>
+    </div>
+
+    <div class="courses-container">
+        <div class="course-card">
+            <img src="course1.jpg" alt="Humanities Course Image">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+                <div>
+                    <h3>Humanities (HU)</h3>
+                    <p>Study philosophy, literature, and art in human history.</p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <!-- Add more courses similarly -->
-  </div>
+        <div class="course-card">
+            <img src="course2.jpg" alt="Fine Arts Course Image">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+                <div>
+                    <h3>Fine Arts (FA)</h3>
+                    <p>Explore artistic expression and its impact on culture.</p>
+                </div>
+            </div>
+        </div>
+        </div>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
-  </footer>
+    <footer>
+        <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
+    </footer>
 
-  <script>
-    function toggleMenu() {
-      const mobileNav = document.getElementById('mobile-nav');
-      mobileNav.classList.toggle('active');
-    }
-  </script>
+    <script>
+        function toggleMenu() {
+            const mobileNav = document.getElementById('mobile-nav');
+            mobileNav.classList.toggle('active');
+        }
+    </script>
 </body>
 
 </html>
