--- a/courses.html
+++ b/courses.html
@@ -33,9 +33,18 @@
             right: 0;
             z-index: 1000;
             display: flex;
-            justify-content: space-between; /* Space out hamburger and links */
+            justify-content: center; /* Center the content by default */
             align-items: center;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+        }
+
+        .nav-container {
+            display: flex;
+            justify-content: space-between; /* Distribute space for hamburger on mobile */
+            align-items: center;
+            width: 100%;
+            max-width: 1200px; /* Optional: Limit the width of the navbar content */
+            padding: 0 20px; /* Add some padding inside the container */
         }
 
         #nav-links {
@@ -44,7 +53,7 @@
             gap: 20px;
             margin: 0;
             padding: 0;
-            justify-content: center;
+            justify-content: center; /* Center the links */
         }
 
         #nav-links li {
@@ -67,7 +76,7 @@
         }
 
         .hamburger-menu {
-            display: none;
+            display: none; /* Hidden by default on larger screens */
             flex-direction: column;
             cursor: pointer;
         }
@@ -75,26 +84,29 @@
         .hamburger-menu div {
             width: 25px;
             height: 3px;
-            margin: 5px 0; /* Adjust vertical margin */
+            margin: 5px 0;
             background-color: #000;
         }
 
         .mobile-nav {
             display: none;
-            position: fixed; /* Changed to fixed for better overlay */
+            position: fixed;
             top: 0;
-            right: 0;
-            background-color: rgba(255, 255, 255, 0.95); /* Slightly more opaque */
+            right: -100%; /* Start off-screen */
+            background-color: rgba(255, 255, 255, 0.95);
             width: 100%;
             height: 100vh;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 30px;
-            padding: 60px 0; /* Add padding to account for fixed navbar */
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; /* Faster transition */
+            padding-top: 60px; /* Account for fixed navbar height */
+            transition: right 0.3s ease-in-out; /* Slide animation */
+            z-index: 1001; /* Ensure it's above the navbar */
+        }
+
+        .mobile-nav.active {
+            right: 0; /* Slide into view */
         }
 
         .mobile-nav a {
@@ -102,8 +114,6 @@
             font-size: 1.5rem;
             font-weight: 600;
             text-decoration: none;
-            opacity: 0;
-            transition: opacity 0.3s ease-in-out 0.1s; /* Added delay for staggered effect */
         }
 
         .mobile-nav a:hover {
@@ -112,19 +122,10 @@
             transform: scale(1.1);
         }
 
-        .mobile-nav.active {
-            opacity: 1;
-            visibility: visible;
-        }
-
-        .mobile-nav.active a {
-            opacity: 1;
-        }
-
         /* Introduction Text */
         .intro {
             text-align: center;
-            margin-top: 30px; /* Reduced top margin */
+            margin-top: 30px;
             padding: 30px;
             background-color: #333;
             color: #fff;
@@ -167,7 +168,7 @@
         .course-card img {
             width: 100%;
             height: auto;
-            transition: filter 0.3s ease; /* Transition for the filter */
+            transition: filter 0.3s ease;
         }
 
         .course-card .overlay {
@@ -233,35 +234,36 @@
             width: 100%;
             position: relative;
             bottom: 0;
-            margin-top: 30px; /* Add some top margin to separate from content */
+            margin-top: 30px;
         }
 
-        /* Darken the image on hover */
         .course-card:hover img {
-            filter: brightness(70%); /* Adjust the percentage to control darkness */
+            filter: brightness(70%);
         }
 
+        /* Media Query for Mobile Screens */
         @media (max-width: 768px) {
+            nav {
+                justify-content: space-between; /* Show hamburger on the left */
+            }
+
+            .nav-container {
+                justify-content: space-between; /* Ensure hamburger and links container are spaced */
+            }
+
             #nav-links {
-                display: none;
+                display: none; /* Hide links on mobile */
             }
 
             .hamburger-menu {
-                display: flex;
-            }
-
-            .mobile-nav {
-                display: flex;
+                display: flex; /* Show hamburger menu */
             }
         }
 
-        @media (max-width: 480px) {
-            .course-card h3 {
-                font-size: 1rem;
-            }
-
-            .course-card p {
-                font-size: 0.9rem;
+        /* Media Query for Larger Screens */
+        @media (min-width: 769px) {
+            .hamburger-menu {
+                display: none; /* Hide hamburger on larger screens */
             }
         }
     </style>
@@ -269,18 +271,20 @@
 
 <body>
     <nav>
-        <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="nav-container">
+            <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <ul id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="projects.html">Personal Projects</a></li>
+            </ul>
         </div>
-        <ul id="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="achievements.html">Achievements</a></li>
-            <li><a href="projects.html">Personal Projects</a></li>
-        </ul>
     </nav>
 
     <div class="mobile-nav" id="mobile-nav">
