--- a/courses.html
+++ b/courses.html
@@ -19,13 +19,13 @@
             font-family: 'Nunito', sans-serif;
             color: #f0f0f0;
             overflow-x: hidden;
-            padding-top: 60px; /* Add padding to prevent content from being hidden under the fixed navbar */
+            padding-top: 60px;
         }
 
         /* Navbar */
         nav {
             background-color: white;
-            padding: 10px 20px; /* Add horizontal padding */
+            padding: 10px 20px;
             width: 100%;
             position: fixed;
             top: 0;
@@ -33,18 +33,18 @@
             right: 0;
             z-index: 1000;
             display: flex;
-            justify-content: center; /* Center the content by default */
+            justify-content: center;
             align-items: center;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
         }
 
         .nav-container {
             display: flex;
-            justify-content: space-between; /* Distribute space for hamburger on mobile */
+            justify-content: space-between;
             align-items: center;
             width: 100%;
-            max-width: 1200px; /* Optional: Limit the width of the navbar content */
-            padding: 0 20px; /* Add some padding inside the container */
+            max-width: 1200px;
+            padding: 0 20px;
         }
 
         #nav-links {
@@ -53,7 +53,7 @@
             gap: 20px;
             margin: 0;
             padding: 0;
-            justify-content: center; /* Center the links */
+            justify-content: center;
         }
 
         #nav-links li {
@@ -76,7 +76,7 @@
         }
 
         .hamburger-menu {
-            display: none; /* Hidden by default on larger screens */
+            display: none;
             flex-direction: column;
             cursor: pointer;
         }
@@ -92,7 +92,7 @@
             display: none;
             position: fixed;
             top: 0;
-            right: -100%; /* Start off-screen */
+            right: -100%;
             background-color: rgba(255, 255, 255, 0.95);
             width: 100%;
             height: 100vh;
@@ -100,13 +100,13 @@
             justify-content: center;
             align-items: center;
             gap: 30px;
-            padding-top: 60px; /* Account for fixed navbar height */
-            transition: right 0.3s ease-in-out; /* Slide animation */
-            z-index: 1001; /* Ensure it's above the navbar */
+            padding-top: 60px;
+            transition: right 0.3s ease-in-out;
+            z-index: 1001;
         }
 
         .mobile-nav.active {
-            right: 0; /* Slide into view */
+            right: 0;
         }
 
         .mobile-nav a {
@@ -114,6 +114,7 @@
             font-size: 1.5rem;
             font-weight: 600;
             text-decoration: none;
+            opacity: 1; /* Ensure they are visible when active */
         }
 
         .mobile-nav a:hover {
@@ -162,7 +163,7 @@
 
         .course-card:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5), 0 0 10px #00bcd4; /* Added glow */
         }
 
         .course-card img {
@@ -244,26 +245,26 @@
         /* Media Query for Mobile Screens */
         @media (max-width: 768px) {
             nav {
-                justify-content: space-between; /* Show hamburger on the left */
+                justify-content: space-between;
             }
 
             .nav-container {
-                justify-content: space-between; /* Ensure hamburger and links container are spaced */
+                justify-content: space-between;
             }
 
             #nav-links {
-                display: none; /* Hide links on mobile */
+                display: none;
             }
 
             .hamburger-menu {
-                display: flex; /* Show hamburger menu */
+                display: flex;
             }
         }
 
         /* Media Query for Larger Screens */
         @media (min-width: 769px) {
             .hamburger-menu {
-                display: none; /* Hide hamburger on larger screens */
+                display: none;
             }
         }
     </style>
